src/main/java/antlr/LambdaParser.java
package antlr;// Generated from C:/Users/Michael/IdeaProjects/Lambda-Calculus/src/main/antlr4\Lambda.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LambdaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VARIABLE=1, SINGLEBOUND=2, MULTIBOUND=3, LAMBDA=4, LPAREN=5, RPAREN=6, 
		DOT=7, WS=8;
	public static final int
		RULE_input = 0, RULE_term = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"input", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'('", "')'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VARIABLE", "SINGLEBOUND", "MULTIBOUND", "LAMBDA", "LPAREN", "RPAREN", 
			"DOT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lambda.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LambdaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LambdaParser.EOF, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(LambdaParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(LambdaParser.VARIABLE, i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LambdaVisitor ) return ((LambdaVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(6); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(6);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LPAREN:
					{
					setState(4);
					term();
					}
					break;
				case VARIABLE:
					{
					setState(5);
					match(VARIABLE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(8); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VARIABLE || _la==LPAREN );
			setState(10);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	 
		public TermContext() { }
		public void copyFrom(TermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SingleBoundContext extends TermContext {
		public TerminalNode LPAREN() { return getToken(LambdaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LambdaParser.RPAREN, 0); }
		public List<TerminalNode> SINGLEBOUND() { return getTokens(LambdaParser.SINGLEBOUND); }
		public TerminalNode SINGLEBOUND(int i) {
			return getToken(LambdaParser.SINGLEBOUND, i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(LambdaParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(LambdaParser.VARIABLE, i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public SingleBoundContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).enterSingleBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).exitSingleBound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LambdaVisitor ) return ((LambdaVisitor<? extends T>)visitor).visitSingleBound(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariablesContext extends TermContext {
		public TerminalNode LPAREN() { return getToken(LambdaParser.LPAREN, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(LambdaParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(LambdaParser.VARIABLE, i);
		}
		public TerminalNode RPAREN() { return getToken(LambdaParser.RPAREN, 0); }
		public VariablesContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).exitVariables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LambdaVisitor ) return ((LambdaVisitor<? extends T>)visitor).visitVariables(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TermVariableContext extends TermContext {
		public TerminalNode LPAREN() { return getToken(LambdaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LambdaParser.RPAREN, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(LambdaParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(LambdaParser.VARIABLE, i);
		}
		public TermVariableContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).enterTermVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).exitTermVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LambdaVisitor ) return ((LambdaVisitor<? extends T>)visitor).visitTermVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiBoundContext extends TermContext {
		public TerminalNode LPAREN() { return getToken(LambdaParser.LPAREN, 0); }
		public TerminalNode MULTIBOUND() { return getToken(LambdaParser.MULTIBOUND, 0); }
		public TerminalNode RPAREN() { return getToken(LambdaParser.RPAREN, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(LambdaParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(LambdaParser.VARIABLE, i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public MultiBoundContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).enterMultiBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).exitMultiBound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LambdaVisitor ) return ((LambdaVisitor<? extends T>)visitor).visitMultiBound(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TermOnlyContext extends TermContext {
		public TerminalNode LPAREN() { return getToken(LambdaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LambdaParser.RPAREN, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TermOnlyContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).enterTermOnly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LambdaListener ) ((LambdaListener)listener).exitTermOnly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LambdaVisitor ) return ((LambdaVisitor<? extends T>)visitor).visitTermOnly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_term);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new SingleBoundContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(12);
				match(LPAREN);
				setState(14); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(13);
					match(SINGLEBOUND);
					}
					}
					setState(16); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SINGLEBOUND );
				setState(20); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(20);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case VARIABLE:
						{
						setState(18);
						match(VARIABLE);
						}
						break;
					case LPAREN:
						{
						setState(19);
						term();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(22); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARIABLE || _la==LPAREN );
				setState(24);
				match(RPAREN);
				}
				break;
			case 2:
				_localctx = new MultiBoundContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				match(LPAREN);
				setState(26);
				match(MULTIBOUND);
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(29);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case VARIABLE:
						{
						setState(27);
						match(VARIABLE);
						}
						break;
					case LPAREN:
						{
						setState(28);
						term();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(31); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARIABLE || _la==LPAREN );
				setState(33);
				match(RPAREN);
				}
				break;
			case 3:
				_localctx = new TermOnlyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				match(LPAREN);
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(35);
					term();
					}
					}
					setState(38); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LPAREN );
				setState(40);
				match(RPAREN);
				}
				break;
			case 4:
				_localctx = new TermVariableContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(42);
				match(LPAREN);
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(43);
					term();
					}
					}
					setState(46); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LPAREN );
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(48);
					match(VARIABLE);
					}
					}
					setState(51); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARIABLE );
				setState(53);
				match(RPAREN);
				}
				break;
			case 5:
				_localctx = new VariablesContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				match(LPAREN);
				setState(56);
				match(VARIABLE);
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					match(VARIABLE);
					}
					}
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARIABLE );
				setState(62);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}